services/order-svc/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  labels:
    app: order-svc
    app.kubernetes.io/part-of: ecommerce-platform
spec:
  type: ClusterIP
  selector:
    app: order-svc
  ports:
    - name: http
      port: 8084
      targetPort: http
